--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -5,7 +5,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainScreen">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/newCharacter"
+        android:layout_width="400px"
+        android:layout_height="150px"
+        android:layout_centerHorizontal="true"
+        android:text="@string/newCharacter"
+        android:textSize="5pt"
+        android:onClick="createCharacter"/>
 
 </RelativeLayout>
